# reference-python-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/plans/: 2025-12-05-flask-api-design.md  2025-12-05-flask-api-implementation.md  2026-06-18-chat-anthropic-migration.md
k8s/: 00-namespace.yaml  10-config.yaml  11-secret.example.yaml  20-deployment.yaml  21-service.yaml  30-ingress.yaml
src/: app.py
src/lib/: auth.py  constants.py  db.py  errors.py
src/prompts/: chat-system.md
src/repositories/: product_repository.py  section_repository.py
src/routes/: auth.py  chat.py  product.py  section.py  views.py
src/schemas/: product.py  section.py
src/services/: product_service.py  section_service.py
src/templates/: base.html  index.html  login.html  products.html  sections.html
tests/lib/: test_auth.py  test_db.py  test_errors.py
tests/repositories/: test_product_repository.py  test_section_repository.py
tests/routes/: test_chat.py
tests/schemas/: test_product.py  test_section.py
tests/services/: test_product_service.py  test_section_service.py
